# multiuses

./: .replit  Dockerfile  README.md  bot.py  docker-compose.yml  health_server.py  info.py  progress.py  pyproject.toml  replit.md  requirements.txt  shhsa.session  shhsa.session-journal  start.sh
database/: db.py
helpers/: downloader.py  ffmpeg.py  task_manager.py  utils.py  watermark.py
plugins/: __init__.py  admin.py  admin_panel.py  audio_replacement.py  cancel.py  cmd.py  credits.py  custom_callbacks.py  file_uploads.py  merge_handler.py  navigation.py  option_menus.py  option_selection.py  premium.py  process_confirmation.py  referral.py  sample_generator.py  screenshot_handler.py  start.py  subtitle_handler.py  text_input_handler.py  thumbnail.py  trim_processing.py  video_handler.py  video_processing.py  video_upload.py  watermark_handler.py  watermark_processing.py  web_server.py
plugins/admin/: __init__.py  add_premium.py  admin_backup_callbacks.py  admin_callbacks.py  admin_comprehensive_config.py  admin_config_callbacks.py  admin_logs_callbacks.py  admin_panel.py  admin_settings_callbacks.py  admin_stats_callbacks.py  admin_utils.py  backup.py  ban_user.py  broadcast.py  broadcast_panel.py  config_handlers.py  create_code.py  database_backup.py  logs.py  logs_panel.py  premium_management.py  search_user.py  settings.py  statistics.py  status.py  test_admin.py  unban_user.py  user_management.py
plugins/credits/: __init__.py  check_credits.py  earn_credits.py
plugins/premium/: __init__.py  info.py  my_plan.py  plans.py  redeem.py
(+4 files in other folders)
