[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "motor>=3.7.1",
    "pymongo>=4.13.2",
    "pyrogram>=2.0.106",
    "python-dotenv>=1.1.1",
    "pytz>=2024.1",
    "aiohttp>=3.8.0",
    "apscheduler>=3.10.0",
    "tgcrypto>=1.2.5",
]
